# racetime-api

./: Cargo.toml
examples/: all_races.rs  leaderboards.rs  past_category_races.rs  user_search.rs
src/: client.rs  endpoint.rs  err.rs  lib.rs
src/endpoints/: all_races.rs  leaderboards.rs  mod.rs  past_category_races.rs  user_data.rs  user_search.rs
src/types/: mod.rs
test_data/: all_races_01.json  races_with_past_entrants.json  races_with_past_entrants_2.json  user_search_f.json
