[package]
name = "racetime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
url = "2.3.1"
async-trait = "0.1"
http = "0.2"
bytes = "1.2"
thiserror = "1.0"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_urlencoded = "0.7"
derive_builder = "0.12.0"
urlencoding = "2.1.2"

[dev-dependencies]
tokio = { version = "1.19.0", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util", "signal"]}